# smgm3d

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
res/: resources.cfg  shader.vs
res/textures/: texture.list
src/: main.cpp
src/core/: #graphics.hpp#  #input.hpp#  file.cpp  file.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  map.hpp  map.tpp  output.cpp  output.hpp  quaternion.cpp  quaternion.hpp  resourceids.hpp  resources.cpp  resources.hpp  shader.cpp  shader.hpp  transform.cpp  transform.hpp
src/core/graphics/: shader.cpp  shader.hpp
src/core/util/: mysleep.h
src/game/: object.cpp  object.hpp
src/physics/: collision.cpp  collision.hpp
src/res/textures/: textures.list
